Refactors application to use Fresno Victory theme
This commit refactors the application to use a new theme, specifically tailored for Fresno Victory.

- Updates the header to use the VBC logo and new navigation items.
- Introduces new UI components (Input, Label, Switch, Textarea) based on Radix primitives and Tailwind CSS.
- Removes demo routes and components.
- Adds vite-plugin-svgr to handle SVG imports as React components.
- Updates dependencies and configuration files to reflect the new theme and components.

--- a/biome.json
+++ b/biome.json
@@ -38,9 +38,5 @@
       "quoteStyle": "double"
     }
   },
-  "extends": [
-    "ultracite/core",
-    "ultracite/remix",
-    "ultracite/react"
-  ]
+  "extends": ["ultracite/core", "ultracite/remix", "ultracite/react"]
 }
