--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "^5.7.2",
     "ultracite": "6.3.9",
     "vite": "^7.1.7",
+    "vite-plugin-svgr": "^4.5.0",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0",
     "wrangler": "^4.40.3"
